--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     <p>PHONE NO : 9573239020</p>
     <p>EMAIL : pranavchinnu009@gmail.com</p>
     <P>linkedin : <A href="http://www.linkedin.com/in/appikonda-pranav-7a0625240">LINK</A></P>
-    <p>RAJAHMUNDRY</p>
+    <p>RAJAHMUNDRY</p><hr><hr>
 
 
          <h3 style="color: black;">CAREER OBJECTIVE</h3>
          <p style="color: black;">To get Challenging job in a company Where I can put all my efforts for the twin benefit of indiviual
-         and company growth and improve my skills and knowledge in the environment</p>
+         and company growth and improve my skills and knowledge in the environment</p><hr><hr>
 
           <h3 style="color: black;"> EDUCATION QUALIFICATION </h3>
           <table bgcolor="black">
@@ -52,6 +52,7 @@
           <td>2015-2016</td>
         </tr>
 </table>
+<hr><hr>
 
 
  <h3> TECHINCAL SKILLS </h3>
@@ -63,9 +64,11 @@
     <li style="color: black;">Photo Shop</li>
     <li style="color: black;">Figma</li>
  </ul>
+ <hr><hr>
 
  <h3> CERTIFICATE</h3>
   <p style="color: black;">I Have a Certificate in UI/UX Development from Tech Mahindra SMART academy </p>
+  <hr><hr>
 
   
 
@@ -75,7 +78,7 @@
     <li style="color: black;">Hindi</li>
     <li style="color: black;">Telugu</li>
   </ul>
-
+<hr><hr>
    <h3> HOBBIES </h3>
   <ul>
     <li style="color: black;">Playing Cricket</li>
@@ -83,6 +86,7 @@
     <li style="color: black;">Watching Movies</li>
     <li style="color: black;">Browsing Internet on lastest updates of UI/UX</li>
    </ul>
+   <hr><hr>
   
 </body>
 </html>
