--- a/index.html
+++ b/index.html
@@ -1,92 +1,122 @@
-<!DOCTYPE html>
-<html lang="en">
-  
++<!+DOCTYPE html> 
+<html>
 <head>
-<title>Pranav Appikonda - Resume </title>
-</head>
+<title>RESUME</title>
+
+
 <style>
-    img {
-      border-radius: 10px;
-    width: 200px;
-    height: 200PX;
+img{
+border-radius: 20px;
+width: 200px;
+height: 200px;
 }
 </style>
 
-<body>
-  <img src="p.jpg" alt="img src">
-    <h1>Pranav Appikonda</h1>
-    <p><B>UI/UX DEVELOPER</B></p>
-    <p>PHONE NO : 9573239020</p>
-    <p>EMAIL : pranavchinnu009@gmail.com</p>
-    <P>linkedin : <A href="http://www.linkedin.com/in/appikonda-pranav-7a0625240">LINK</A></P>
-    <p>RAJAHMUNDRY</p><hr><hr>
+</head>
 
 
-         <h3 style="color: black;">CAREER OBJECTIVE</h3>
-         <p style="color: black;">To get Challenging job in a company Where I can put all my efforts for the twin benefit of indiviual
-         and company growth and improve my skills and knowledge in the environment</p><hr><hr>
+<body bgcolor="#ccf1f6">
 
-          <h3 style="color: black;"> EDUCATION QUALIFICATION </h3>
-          <table bgcolor="black">
+<center>
+<img src="pranav.jpg" alt="image" border="3" color="#ccf1f6">
+<h1><font face="Roboto" color="#045b64"><u>PRANAV APPIKONDA </u></font></h1>
+<h3><font face="Roboto" color="#187a85">UI/UX DEVELOPER</font></h3>
+</center>
 
-          <tr bgcolor="skyblue">
-          <th width="300px">Qualification</th>
-          <th width="150px">Marks</th>
-          <th width="150px">Year</th>
-          
-        </tr>
-        <tr bgcolor="lightgrey" align="center">
-          <td>C.N.R Degree college(Bsc.computers)</td>
-          <td>70%</td>
-          <td>2021-2024</td>
-        </tr>
+<hr color="#1d8e9b" size="10">
 
-        <tr bgcolor="lightgrey" align="center">
-          <td>Narayana Junior College(10+2)</td>
-          <td>74%</td>
-          <td>2016-2018</td>
-        </tr>
-    <tr bgcolor="lightgrey" align="center">
-          <td>Sri Chaitanya techno School (SSC)</td>
-          <td>7.5 CGPA</td>
-          <td>2015-2016</td>
-        </tr>
+
+<center><h2><font face="Roboto" color="#045b64"><u>CAREER OBJECTIVE</u></font></h2></center>
+
+<h3><font face="Arial Rounded MT" color="#126973">To get Challenging job in a company Where I can put all my efforts for the twin benefit of indiviual and company growth and improve my skills and knowledge in the environment.</font></h3>
+
+
+<hr color="#1d8e9b" size="2">
+
+<center><h2><font face="Roboto" color="#045b64"><u>EDUCATION QUALIFICATION</u></font></h2></center><br><br>
+
+<center>
+
+<table>
+<tr bgcolor="#0b6d78">
+
+<th WIDTH="500" ALIGN="center"><font face="Roboto" size="5" color="#ccf1f6">QUALIFICATION</font></th>
+<th WIDTH="200" ALIGN="center"><font face="Roboto" size="5" color="#ccf1f6">MARKS</fonts></th>
+<th WIDTH="300" ALIGN="center"><font face="Roboto" size="5" color="#ccf1f6">YEARS</fonts></th>
+</th>
+</tr>
+
+<tr bgcolor="#0eb4c8">
+<td align="center"><font  face="Roboto" size="4" color="#ccf1f6">C.N.R Degree college</font></td>
+<td align="center"><font  face="Roboto" size="4" color="#ccf1f6">70%</font></td>
+<td align="center"><font  face="Roboto" size="4" color="#ccf1f6">2021-2024</font></td>
+</tr>
+
+<tr bgcolor="#0eb4c8">
+<td align="center"><font  face="Roboto" size="4" color="#ccf1f6"> Narayan Junior College</font></td>
+<td align="center"><font  face="Roboto" size="4" color="#ccf1f6">74%</font></td>
+<td align="center"><font  face="Roboto" size="4" color="#ccf1f6">2016-2018</font></td>
+</tr>
+
+<tr bgcolor="#0eb4c8">
+<td align="center"><font  face="Roboto" size="4" color="#ccf1f6">Sri Chaitanya School</font></td>
+<td align="center"><font  face="Roboto" size="4" color="#ccf1f6">7.5 CGPA</font></td>
+<td align="center"><font  face="Roboto" size="4" color="#ccf1f6">2015-2016</font></td>
+</tr>
 </table>
-<hr><hr>
+</center>
+<br>
+<hr color="#1d8e9b" size="2">
 
 
- <h3> TECHINCAL SKILLS </h3>
- <ul>
-   <li style="color: black;">CSS</li>
-    <li style="color: black;">XD</li>
-    <li style="color: black;">JavaScript</li>
-    <li style="color: black;">Adobe Illustator</li>
-    <li style="color: black;">Photo Shop</li>
-    <li style="color: black;">Figma</li>
- </ul>
- <hr><hr>
 
- <h3> CERTIFICATE</h3>
-  <p style="color: black;">I Have a Certificate in UI/UX Development from Tech Mahindra SMART academy </p>
-  <hr><hr>
+<center><h2><font face="Roboto" color="#045b64"><u>TECHINICAL SKILLS</u></font></h2></center><br><br>
 
-  
+<ul>
+<li><font face="Roboto" color="#045b64" size="4"><b>Adobe Photoshop</b></font></li>
+<li><font face="Roboto" color="#045b64"size="4"><b>Adobe Illustator</b></font></li>
+<li><font face="Roboto" color="#045b64"size="4"><b>Adobe Figma</b></font></li>
+<li><font face="Roboto" color="#045b64"size="4"><b>Adobe HTML</b></font></li>
+<li><font face="Roboto" color="#045b64"size="4"><b>Adobe CSS</b></font></li>
+</ul>
+<hr color="#1d8e9b" size="2">
 
-  <h3> LANGUAGES</h3>
-  <ul>
-    <li style="color: black;">English</li>
-    <li style="color: black;">Hindi</li>
-    <li style="color: black;">Telugu</li>
-  </ul>
-<hr><hr>
-   <h3> HOBBIES </h3>
-  <ul>
-    <li style="color: black;">Playing Cricket</li>
-    <li style="color: black;">Listening to Music</li>
-    <li style="color: black;">Watching Movies</li>
-    <li style="color: black;">Browsing Internet on lastest updates of UI/UX</li>
-   </ul>
-   <hr><hr>
-  
+
+
+<center><h2><font face="Roboto" color="#045b64"><u>CERTIFICATE</u></font></h2>
+
+<hr color="#1d8e9b" size="2">
+<marquee bgcolor="#045b64" scrollamount="15"><h3><font face="Roboto" color="#ccf1f6" size="4">I Have a Certificate in UI/UX Development from Tech Mahindra SMART academy</font></h3>
+</center></marquee>
+<hr color="#1d8e9b" size="2">
+
+
+
+<h2><font face="Roboto" color="#045b64"><u>LANGUAGES</u></font></h2></center>
+
+
+<ul>
+<li><font face="Roboto" color="#045b64" size="4"><b>English</b></font></li>
+<li><font face="Roboto" color="#045b64"size="4"><b>Telugu</b></font></li>
+<li><font face="Roboto" color="#045b64"size="4"><b>Hindi</b></font></li>
+</ul>
+<hr color="#1d8e9b" size="2">
+
+
+
+
+<CENTER><h2><font face="Roboto" color="#045b64"><u>HOBBIES</u></font></h2></center>
+
+<ul>
+<li><font face="Roboto" color="#045b64" size="4"><b>Playing Cricket</b></font></li>
+<li><font face="Roboto" color="#045b64"size="4"><b>Listening to Music</b></font></li>
+<li><font face="Roboto" color="#045b64"size="4"><b>Watching Movies</b></font></li>
+<li><font face="Roboto" color="#045b64"size="4"><b>Browsing Internet oon latest updates of UI/UL</b></font></li>
+</ul>
+<hr color="#1d8e9b" size="2">
+
+
+
+
 </body>
 </html>
